--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <header class="cabecalho">
             <img class="logo" src="./assets/img/logo.jpg" alt="Logo Fruta & Fruto">
             <nav class="menu">
-                <ul class="menu-lista">
-                    <li class="menu-item"><a class="menu-link ativo"  href="#">Início</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">Receitas</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">Quem Somos</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">Comunidade</a></li>
+                <ul class="menu__lista">
+                    <li class="menu__item"><a class="menu__link ativo"  href="#">Início</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Receitas</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Quem Somos</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Comunidade</a></li>
                 </ul>
             </nav>
         </header>
