--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <link href="./assets/css/menu/menu-item.css" rel="stylesheet" />
         <link href="./assets/css/menu/menu-link.css" rel="stylesheet" />
         <link href="./assets/css/menu/menu.lista.css" rel="stylesheet" />
+        <link href="./assets/css/banner/banner.css" rel="stylesheet" />
+        <link href="./assets/css/banner/banner-titulo.css" rel="stylesheet" />
+        <link href="./assets/css/banner/banner-imagem.css" rel="stylesheet" />
     </head>
     <body>
         <header class="cabecalho">
@@ -26,6 +29,15 @@
             </nav>
         </header>
 
+        <section class="banner">
+            <img class="banner__imagem" src="./assets/img/banner.jpg" alt="Foto de uma feira de frutas">
+            <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
+        </section>
+
+        <section class="sobre">
+            <h2 class="sobre__titulo">Receitas para economizar e ganhar saúde</h2>
+            <p class="sobre__descricao">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade </p>
+        </section>
 
     </body>
 </html>
