[ADD] about section html and css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <link href="./assets/css/banner/banner.css" rel="stylesheet" />
         <link href="./assets/css/banner/banner-titulo.css" rel="stylesheet" />
         <link href="./assets/css/banner/banner-imagem.css" rel="stylesheet" />
+        <link rel="stylesheet" href="./assets/css/sobre/sobre.css">
+        <link rel="stylesheet" href="./assets/css/sobre/sobre-titulo.css" />
+        <link rel="stylesheet" href="./assets/css/sobre/sobre-descricao.css" />
     </head>
     <body>
         <header class="cabecalho">
