--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="./assets/css/pessoa/pessoa-funcao.css"  />
     <link rel="stylesheet" href="./assets/css/pessoa/pessoa-imagem.css"  />
     <link rel="stylesheet" href="./assets/css/pessoa/pessoa-nome.css"  />
+    <link rel="stylesheet" href="./assets/css/rodape.css" />
 
 </head>
 
@@ -133,6 +134,10 @@
             </div>
         </div>
     </section>
+
+    <footer class="rodape">
+        Contato: exemplo@email.com.br
+    </footer>
 
 </body>
 
