--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
 
     <section class="banner">
-        <img class="banner__imagem" src="./assets/img/banner.jpg" alt="Foto de uma feira de frutas">
+        <div class="banner__imagem"> </div>
         <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
     </section>
 
